--- a/package.json
+++ b/package.json
@@ -1,10 +1,1 @@
-{
-"type": "module",
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1"
-  }
-}
+{"type":"module","devDependencies":{"nodemon":"^2.0.19"},"dependencies":{"cors":"^2.8.5","dotenv":"^16.0.2","express":"^4.18.1","mongodb":"^4.9.1"}}
