--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-{"type":"module","devDependencies":{"nodemon":"^2.0.19"},"dependencies":{"cors":"^2.8.5","dayjs":"^1.11.5","dotenv":"^16.0.2","express":"^4.18.1","joi":"^17.6.0","mongodb":"^4.9.1","string-strip-html":"^11.6.1"}}
+{
+    "type":"module",
+    "devDependencies":
+        {
+            "nodemon":"^2.0.19"
+        },
+    "dependencies":
+        {
+            "cors":"^2.8.5",
+            "dayjs":"^1.11.5",
+            "dotenv":"^16.0.2",
+            "express":"^4.18.1",
+            "joi":"^17.6.0",
+            "mongodb":"^4.9.1",
+            "string-strip-html":"^11.6.1"
+        }
+}
